<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.wit.pridenjoy.fragments.EditFragment">

    <TextView
        android:id="@+id/editPageTitle"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/edit_details_below"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.010"  />


        <RadioGroup
            android:id="@+id/editCategoryType"
            android:layout_width="220dp"
            android:layout_height="200dp"
            android:layout_below="@+id/editPageTitle"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/texbox_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPageTitle"
            app:layout_constraintVertical_bias="0.128">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-6dp"
                android:background="#ffffff"
                android:text="@string/select_category"
                android:textColor="@color/colorPrimaryDark"/>

            <RadioButton
                android:id="@+id/ArtCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/art_workshops"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/MusicCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/music_live_performances"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/SocialCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/social_networking"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/CharityCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/charity_fundraising"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/BusinessCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/business_technology"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/FoodCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_trade_show"
                android:textStyle="bold"/>
        </RadioGroup>

    <TextView
        android:id="@+id/editDate"
        app:layout_constraintStart_toEndOf="@id/editCategoryType"
        app:layout_constraintTop_toTopOf="@id/editCategoryType"
        android:layout_marginLeft="4dp"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:hint="Set a Date"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:visibility="visible"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/texbox_border" />

    <TextView
        android:id="@+id/editTime"
        app:layout_constraintStart_toEndOf="@id/editCategoryType"
        app:layout_constraintTop_toBottomOf="@id/editDate"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:hint="Set a Time"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:visibility="visible"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/texbox_border"/>

    <TextView
        android:id="@+id/editLatitude"
        app:layout_constraintStart_toEndOf="@id/editCategoryType"
        app:layout_constraintTop_toBottomOf="@id/editTime"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:hint="Latitude"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:maxLength="8"
        android:visibility="visible"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/texbox_border"/>

    <TextView
        android:id="@+id/editLongitude"
        app:layout_constraintStart_toEndOf="@id/editCategoryType"
        app:layout_constraintTop_toBottomOf="@id/editLatitude"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:hint="Longitude"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:maxLength="9"
        android:visibility="visible"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/texbox_border"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/editCategoryType"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

        <EditText
        android:id="@+id/editEventTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:width="340dp"
            android:hint="Edit title"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:background="@drawable/texbox_border"
            android:paddingStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-4dp"
                android:background="#ffffff"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/event_Title" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

    <EditText
        android:id="@+id/editEventDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@drawable/texbox_border"
                android:hint="Edit event details (max 120 characters)"
                android:inputType="textMultiLine"
                android:maxLength="120"
                android:maxLines="4"
                android:lines="4"
                android:padding="8dp"
                android:paddingStart="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-4dp"
                android:background="#ffffff"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/event_Details" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="460dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/IV_editEventImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/ic_image_holder" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="481dp">

        <ImageButton
            android:id="@+id/btnEditImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="start"
            android:background="@color/colorWhite"
            android:src="@drawable/ic_add_image_24" />

        <ImageButton
            android:id="@+id/btnEditDate"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="start"
            android:background="@color/colorWhite"
            android:src="@drawable/ic_add_date_24" />

        <ImageButton
            android:id="@+id/btnEditTime"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="start"
            android:background="@color/colorWhite"
            android:src="@drawable/ic_add_time_24" />

        <ImageButton
            android:id="@+id/btnEditLocation"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="start"
            android:background="@color/colorWhite"
            android:src="@drawable/ic_add_location_24" />

        <ImageButton
            android:id="@+id/btnEditSave"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="start"
            android:background="@color/colorWhite"
            android:src="@drawable/ic_add_save_24" />

        <ImageButton
            android:id="@+id/btnEditDelete"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="start"
            android:background="@color/colorWhite"
            android:src="@drawable/ic_add_delete_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>