<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context=".activities.MapViewAll"
  tools:showIn="@layout/activity_map_view_all">

  <com.google.android.gms.maps.MapView
      android:id="@+id/mapView"
      android:layout_width="361dp"
      android:layout_height="451dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toTopOf="@+id/cardView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.cardview.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="356dp"
    android:layout_height="180dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="16dp"
      app:layout_constraintTop_toBottomOf="@id/mapView"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.533"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <ImageView
          android:id="@+id/currentImage"
          android:layout_width="121dp"
          android:layout_height="98dp"
          android:layout_marginEnd="16dp"
          android:contentDescription="@string/placemark_image_placeholder"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.158"
          tools:srcCompat="@tools:sample/backgrounds/scenic" />

      <TextView
          android:id="@+id/currentTitle"
          android:layout_width="200dp"
          android:layout_height="24dp"
          android:text="@string/placemark_title_placeholder"
          android:textStyle="bold"
          app:layout_constraintBottom_toTopOf="@+id/currentDescription"
          app:layout_constraintEnd_toStartOf="@+id/currentImage"
          app:layout_constraintHorizontal_bias="0.473"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.666" />

      <TextView
          android:id="@+id/currentDescription"
          android:layout_width="200dp"
          android:layout_height="96dp"
          android:layout_marginBottom="40dp"
          android:text="@string/placemark_description_placeholder"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/currentImage"
          app:layout_constraintHorizontal_bias="0.473"
          app:layout_constraintStart_toStartOf="parent" />

      <TextView
          android:id="@+id/textDate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:text="Date"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="@id/currentTitle"/>

      <TextView
          android:id="@+id/textTime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:text="Time"
          android:textStyle="bold"
          android:layout_marginLeft="10dp"
          app:layout_constraintEnd_toStartOf="@id/imageButtonFavourite"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="@id/textDate"
          app:layout_constraintStart_toEndOf="@id/textDate" />

      <ImageButton
          android:id="@+id/imageButtonFavourite"
          android:layout_width="64dp"
          android:layout_height="64dp"
          app:srcCompat="@android:drawable/btn_star_big_on"
          app:layout_constraintBottom_toBottomOf="parent
"         app:layout_constraintStart_toStartOf="@id/currentImage" />

      <ImageButton
          android:id="@+id/imageButtonNotifications"
          android:layout_width="64dp"
          android:layout_height="64dp"
          app:srcCompat="@android:drawable/stat_notify_chat"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="@id/currentImage"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>